docker 관련 listener sasl 설정 변경

--- a/resources/kafka-jaas.properties
+++ b/resources/kafka-jaas.properties
@@ -5,8 +5,6 @@ KafkaServer {
     user_admin="!@34admin"
     user_app="!@34app";
 };
-Client {
-    org.apache.kafka.common.security.plain.PlainLoginModule required
-   username="admin"
-   password="!@34admin";
-};
+
+Client {};
+
