--- a/resources/server.properties
+++ b/resources/server.properties
@@ -126,6 +126,7 @@ zookeeper.connect=zookeeper:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
+zookeeper.sasl.enabled=false
 
 
 ############################# Group Coordinator Settings #############################
@@ -138,7 +139,18 @@ zookeeper.connection.timeout.ms=18000
 group.initial.rebalance.delay.ms=0
 
 
-listeners=SASL_PLAINTEXT://:9092
+listeners=SASL_PLAINTEXT://0.0.0.0:9092
+advertised.listeners=SASL_PLAINTEXT://localhost:9092
 security.inter.broker.protocol=SASL_PLAINTEXT
 sasl.mechanism.inter.broker.protocol=PLAIN
 sasl.enabled.mechanisms=PLAIN
+
+# listeners=ASL_PLATINTEXT://0.0.0.0:9092
+# advertised.listeners=SASL_PLATINTEXT://127.0.0.1:9092
+# # listener.security.protocol.map=INTERNAL:PLAINTEXT,SASL_PLATINTEXT:PLAINTEXT
+# # inter.broker.listener.name=INTERNAL
+
+# security.inter.broker.protocol=SASL_PLATINTEXT
+# sasl.mechanism.inter.broker.protocol=PLAIN
+# sasl.enabled.mechanisms=PLAIN
+# # listener.security.protocol.map=INTERNAL:PLAINTEXT,SASL_PLATINTEXT:PLAINTEXT
