--- a/resources/zookeeper.properties
+++ b/resources/zookeeper.properties
@@ -22,7 +22,7 @@ maxClientCnxns=0
 # Set the port to something non-conflicting if choosing to enable this
 admin.enableServer=false
 # admin.serverPort=8080
-
-zookeeper.sasl.client=true
-authProvider.1=org.apache.zookeeper.server.auth.SASLAuthenticationProvider
-requireClientAuthScheme=sasl
+zookeeper.sasl.client=false
+# zookeeper.sasl.client=true
+# authProvider.1=org.apache.zookeeper.server.auth.SASLAuthenticationProvider
+# requireClientAuthScheme=sasl
